# raasta

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench-history.csv  deny.toml  tarpaulin-report.json
.github/workflows/: release.yml
benches/: benchmarks.rs
docs/adr/: 001-flat-crate.md  002-hisab-types.md  003-feature-gated-parallel.md
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: testing.md  usage.md
examples/: basic.rs  navmesh.rs  rvo_crowd.rs  steering.rs
scripts/: bench-history.sh  coverage-check.sh  version-bump.sh
src/: agent.rs  batch.rs  blend.rs  bridge.rs  collider_nav.rs  corridor.rs  crowd.rs  debug_draw.rs  dstar.rs  error.rs  follow.rs  formation.rs  grid.rs  heightfield.rs  hpa.rs  incremental.rs  influence.rs  lib.rs  logging.rs  mesh.rs  mesh3d.rs  multilayer.rs  offmesh.rs  parallel.rs  path.rs  query.rs  rvo.rs  smooth.rs  steer.rs  steer3d.rs  tiled.rs  triangulate.rs  voxel.rs
src/integration/: soorat.rs
tests/: integration.rs
